--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: windows-latest
 
     env:
-      Solution_Name: MovieApp.sln
-      Wap_Project_Directory: MovieApp.Package
-      Wap_Project_Path: MovieApp.Package\MovieApp.Package.wapproj
+      Project_Path: MovieApp/MovieApp.csproj        # Path to the MovieApp project file
+      DOTNET_ROOT: C:\Program Files\dotnet
+      Configuration: ${{ matrix.configuration }}
 
     steps:
     - name: Checkout code
@@ -34,26 +34,17 @@ jobs:
       uses: microsoft/setup-msbuild@v2
 
     - name: Restore dependencies
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      run: dotnet restore $env:Project_Path --configuration $env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
 
     - name: Build the project
-      run: msbuild $env:Solution_Name /t:Build /p:Configuration=$env:Configuration
+      run: dotnet build $env:Project_Path --configuration $env:Configuration
       env:
-        Configuration: ${{ matrix.configuration }}
-
-    # Optional: Create the app package if applicable
-    - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
-      env:
-        Appx_Bundle: Always
-        Appx_Bundle_Platforms: x86|x64
-        Appx_Package_Build_Mode: StoreUpload
         Configuration: ${{ matrix.configuration }}
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: BuildArtifacts
-        path: ./path_to_build_output
+        path: ./path_to_build_output  # Adjust to the location where the build output is stored
